# zwift-workout-file-reference

./: .editorconfig  .gitignore  LICENSE  LICENSE.MIT.txt  Makefile  README.md  descriptions.yaml  pyproject.toml  tag_attr_usage.json  zwift_workout_file_tag_reference.md
zwift_zwo_docs/: analyse_zwo.py  render_docs.py
